# drone-depthai

./: .gitignore  .gitmodules  CMakeLists.txt  depthai_core.cpp  depthai_core.hpp  drone.cpp  drone.h  drone.json  main.cpp  msp.cpp  msp.h  pid.cpp  pid.h  web_server.cpp  web_server.h
config/: config.json  drone.json
config/networks/person/: face-detection-retail-0004.json
config/networks/person-2/: face-detection-adas-0001_depth.json
config/networks/vehicle/: vehicle-detection-adas-0002.json  vehicle-detection-adas-0002.xml
docker/arm-cc/: Dockerfile  arm-openvino.toolchain.cmake
docker/arm64-cc/: Dockerfile  arm-openvino.toolchain.cmake
docker/rpi-docker-zero/: Dockerfile  rpi-2.toolchain.cmake  rpi.toolchain.cmake
